[package]
name = "fd-lock-rs"
version = "0.1.3"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Like [fd-lock](https://crates.io/crates/fd-lock) but with a slightly different API."
keywords = ["file", "lock", "flock"]
documentation = "https://docs.rs/fd-lock-rs"
repository = "https://github.com/dr-bonez/fd-lock-rs"

[dependencies]
nix = "0.19.1"
